// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Link Default Usage 1`] = `
.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: inline;
  padding: 0;
  color: #0046FF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<span
  className="c0"
>
  <a
    className="c1"
    href="/startpage"
    onClick={[Function]}
  >
    Link
  </a>
</span>
`;

exports[`Storyshots Molecules | Link External Link With Its Default Values 1`] = `
.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: inline;
  padding: 0;
  color: #0046FF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<span
  className="c0"
>
  <a
    className="c1"
    external={true}
    href="http://www.google.com"
    onClick={[Function]}
    rel="noopener noreferrer nofollow"
    target="_blank"
  >
    Link
  </a>
</span>
`;

exports[`Storyshots Molecules | Link External Link With Rel And Target Overriden 1`] = `
.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: inline;
  padding: 0;
  color: #0046FF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<span
  className="c0"
>
  <a
    className="c1"
    external={true}
    href="http://www.google.com"
    onClick={[Function]}
    rel="nofollow"
    target="_self"
  >
    Link
  </a>
</span>
`;

exports[`Storyshots Molecules | Link With Disabled Prop Results In A Disabled Button Looking Like A Link 1`] = `
.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: inline;
  padding: 0;
  color: #A0A09B;
  border: none;
  background: transparent;
  overflow: visible;
  -webkit-appearance: none !important;
  cursor: not-allowed;
  font-weight: inherit;
}

.c1,
.c1[type='button'],
.c1[type='reset'],
.c1[type='submit'] {
  -webkit-appearance: button;
}

.c1::-moz-focus-inner,
.c1[type='button']::-moz-focus-inner,
.c1[type='reset']::-moz-focus-inner,
.c1[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c1:-moz-focusring,
.c1[type='button']:-moz-focusring,
.c1[type='reset']:-moz-focusring,
.c1[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<span
  className="c0"
>
  <button
    className="c1"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    Link
  </button>
</span>
`;

exports[`Storyshots Molecules | Link With Typography Primary As Type 1`] = `
.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c1 {
  display: inline;
  padding: 0;
  color: #0046FF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<span
  className="c0"
>
  <a
    className="c1"
    href="/startpage"
    onClick={[Function]}
  >
    Link
  </a>
</span>
`;

exports[`Storyshots Molecules | Link Without To Prop Results In A Button Looking Like A Link 1`] = `
.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: inline;
  padding: 0;
  color: #0046FF;
  border: none;
  background: transparent;
  overflow: visible;
  -webkit-appearance: none !important;
  cursor: pointer;
  font-weight: inherit;
}

.c1,
.c1[type='button'],
.c1[type='reset'],
.c1[type='submit'] {
  -webkit-appearance: button;
}

.c1::-moz-focus-inner,
.c1[type='button']::-moz-focus-inner,
.c1[type='reset']::-moz-focus-inner,
.c1[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c1:-moz-focusring,
.c1[type='button']:-moz-focusring,
.c1[type='reset']:-moz-focusring,
.c1[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<span
  className="c0"
>
  <button
    className="c1"
    onClick={[Function]}
    type="button"
  >
    Link
  </button>
</span>
`;
